<resources>
    <string name="app_name">Veterinary Clinic</string>

    <!-- MAIN
     ACTIVITY STRINGS -->
    <string name="clinic">CLINICĂ</string>
    <string name="veterinary">VETERINARĂ</string>
    <string name="welcome">Bine ați venit!</string>

    <string name="login">Autentificare</string>
    <string name="sign_up">Înregistrare</string>

    <!-- LOGIN ACTIVITY STRINGS -->
    <string name="connect">Conectare</string>

    <string name="user_name">Nume de utilizator</string>
    <string name="password">Parola</string>
    <string name="confirm_password">Confirmați parola</string>

    <string name="empty_message">Acest câmp nu poate să fie gol.</string>


    <string name="incorrect_message">Datele introduse de dumneavoastra nu sunt corecte.</string>
    <string name="try_again_message">Vă rugăm să reîncercați !</string>

    <!-- SIGN UP ACTIVITY STRINGS -->
    <string name="account_type">Tipul contului</string>

    <string name="veterinarian">Medic veterinar</string>
    <string name="owner">Stăpân</string>

    <string name="surname">Nume</string>
    <string name="name">Prenume</string>

    <string name="email_address">Adresa de email</string>
    <string name="phone_number">Numar de telefon</string>

    <string name="specialisation">Specializare</string>
    <string name="create_account">Creare cont</string>

    <string name="surgery">Chirurgie</string>
    <string name="dermatology">Dermatologie</string>
    <string name="internal_medicine">Medicină internă</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>